# teamwork

./: .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  rustfmt.toml
src/: main.rs
teamwork_macros/: Cargo.toml
teamwork_macros/src/: lib.rs
teamwork_schema/: Cargo.toml
teamwork_schema/src/: lib.rs
