[package]
name = "teamwork_macros"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
syn = { version = "1.0.55", features = ["default", "extra-traits"] }
quote = "1.0.8"
Inflector = "0.11"
proc-macro2 = "1.0.24"
serde_with = "1.6.0"
lazy_static = "1.4.0"

[lib]
proc-macro = true
